# 0.2.4
- Fixed a database issue that prevented custom settings from being saved
- Automatically re-generate the reset CSS after resetting settings to the defaults
- Fixed an issue that prevented backend sliders from working properly

# 0.2.3
- All font files are now handled via the WP media gallery popup in the admin area
- Added option to delete all linked media gallery files when deleting a fontset
- Added option to selected existing webfont file from media gallery for several fontsets
- Added file and folder permissions check and notification to the admin area
- Fixed an issue where removing one file would remove all files of a fontset
- Fixed an issue where the initially selected font of a Fontsampler would not get saved
- Fixed an issue where a setting in the server's php.ini would limit the amount of inline fonts that could be uploaded inline while adding a new Fontsampler

# 0.2.2
- Hotfix fixing missing default setting units for font size, line height and letterspacing sliders after saving settings
- Implemented further checks for ensuring the default settings are valid
- Implemented "Fix from defaults" action in case some default settings were invalid

# 0.2.1
- Hotfix for Fontsampler sliders not working in the user-facing frontend
- Small fix to prevent unnecessarily breaking older versions of PHP

# 0.2.0
- Complete style overhaul for the admin area
- Supporting fully customisable settings on a per Fontsampler basis
- Color themes can be customised for each Fontsampler
- Added "Notifications" tab to admin area informing of any detected problems
- Implemented sorting and storing a default Fontsampler layout order in the settings
- Implemented action to reset the settings to the shipped defaults (in case you get carried away tweaking the settings ;) )
- Implemented copy-to-clipboard button in admin area for improved ease of use
- Fixed iOS 8 javascript errors from an included library
- Updated sponsors (Yay, thanks!)