@@ -1,5 +1,11 @@
 
 #fontsampler-admin {
+    .form-settings {
+        .fontsampler-admin-slider-label .setting-description {
+            min-width: 10em;
+            display: inline-block;
+        }
+    }
     .form-settings label {
         clear: both;
         display: block;
