@@ -269,6 +269,10 @@
   touch-action: pan-x;
   -ms-touch-action: pan-x;
 }
+#fontsampler-admin .form-settings .fontsampler-admin-slider-label .setting-description {
+  min-width: 10em;
+  display: inline-block;
+}
 #fontsampler-admin .form-settings label {
   clear: both;
   display: block;
